Updated to lowerCamelCase for parameters.

--- a/lib/l10n/intl_en.arb
+++ b/lib/l10n/intl_en.arb
@@ -14,50 +14,50 @@
   "ItemColourVariationLabel" : "Colour Variation",
   "ItemClothingTypeLabel" : "Clothing Type",
   "ItemClothingLayerLabel" : "Clothing Layer",
-  "Spring": "Spring",
-  "Summer": "Summer",
-  "Autumn": "Autumn",
-  "Winter": "Winter",
-  "Multi": "Multi",
-  "Top": "Top",
-  "Bottom": "Bottom",
-  "OnePiece": "One Piece",
-  "Base": "Base",
-  "Mid": "Mid",
-  "Outer": "Outer",
-  "Red": "Red",
-  "Blue": "Blue",
-  "Green": "Green",
-  "Yellow": "Yellow",
-  "Brown": "Brown",
-  "Grey": "Grey",
-  "Rainbow": "Rainbow",
-  "Black": "Black",
-  "White": "White",
-  "Light": "Light",
-  "Medium": "Medium",
-  "Dark": "Dark",
-  "Bag": "Bag",
-  "Belt": "Belt",
-  "Eyewear": "Eyewear",
-  "Gloves": "Gloves",
-  "Hat": "Hat",
-  "Jewellery": "Jewellery",
-  "Scarf": "Scarf",
-  "Tie": "Tie",
-  "Clothing": "Clothing",
-  "Shoes": "Shoes",
-  "Accessory": "Accessory",
-  "Boots": "Boots",
-  "Everyday": "Everyday",
-  "Athletic": "Athletic",
-  "Formal": "Formal",
-  "Niche": "Niche",
-  "Active": "Active",
-  "Casual": "Casual",
-  "Workplace": "Workplace",
-  "Social": "Social",
-  "Event": "Event",
+  "spring": "Spring",
+  "summer": "Summer",
+  "autumn": "Autumn",
+  "winter": "Winter",
+  "multi": "Multi",
+  "top": "Top",
+  "bottom": "Bottom",
+  "onePiece": "One Piece",
+  "base": "Base",
+  "mid": "Mid",
+  "outer": "Outer",
+  "red": "Red",
+  "blue": "Blue",
+  "green": "Green",
+  "yellow": "Yellow",
+  "brown": "Brown",
+  "grey": "Grey",
+  "rainbow": "Rainbow",
+  "black": "Black",
+  "white": "White",
+  "light": "Light",
+  "medium": "Medium",
+  "dark": "Dark",
+  "bag": "Bag",
+  "belt": "Belt",
+  "eyewear": "Eyewear",
+  "gloves": "Gloves",
+  "hat": "Hat",
+  "jewellery": "Jewellery",
+  "scarf": "Scarf",
+  "tie": "Tie",
+  "clothing": "Clothing",
+  "shoes": "Shoes",
+  "accessory": "Accessory",
+  "boots": "Boots",
+  "everyday": "Everyday",
+  "athletic": "Athletic",
+  "formal": "Formal",
+  "niche": "Niche",
+  "active": "Active",
+  "casual": "Casual",
+  "workplace": "Workplace",
+  "social": "Social",
+  "event": "Event",
   "upload_upload": "Upload",
   "filter_filter": "Filter",
   "addCloset_addCloset": "Add Closet",
@@ -108,9 +108,9 @@
   "thankYou": "Thank You!",
   "interestAcknowledged": "Your interest has been noted. Stay tuned for updates.",
   "ok": "OK",
-  "Sell": "Sell",
-  "Swap": "Swap",
-  "Gift": "Pay It Forward",
+  "sell": "Sell",
+  "swap": "Swap",
+  "gift": "Pay It Forward",
   "Throw": "Throw",
   "declutterOptions" : "What would you like to do?",
   "itemsUploadedTooltip": "This shows the number of items you have uploaded",
