--- a/lib/l10n/intl_zh_CN.arb
+++ b/lib/l10n/intl_zh_CN.arb
@@ -14,50 +14,50 @@
   "ItemColourVariationLabel" : "颜色变化",
   "ItemClothingTypeLabel" : "服装类型",
   "ItemClothingLayerLabel" : "服装层次",
-  "Spring": "春季",
-  "Summer": "夏季",
-  "Autumn": "秋季",
-  "Winter": "冬季",
-  "Multi": "多季",
-  "Top": "上装",
-  "Bottom": "下装",
-  "OnePiece": "连体衣",
-  "Base": "基础层",
-  "Mid": "中间层",
-  "Outer": "外层",
-  "Red": "红色",
-  "Blue": "蓝色",
-  "Green": "绿色",
-  "Yellow": "黄色",
-  "Brown": "棕色",
-  "Grey": "灰色",
-  "Rainbow": "彩虹色",
-  "Black": "黑色",
-  "White": "白色",
-  "Light": "浅色",
-  "Medium": "中间色",
-  "Dark": "深色",
-  "Bag": "包",
-  "Belt": "腰带",
-  "Eyewear": "眼镜",
-  "Gloves": "手套",
-  "Hat": "帽子",
-  "Jewellery": "珠宝",
-  "Scarf": "围巾",
-  "Tie": "领带",
-  "Clothing": "服装",
-  "Shoes": "鞋子",
-  "Accessory": "配饰",
-  "Boots": "靴子",
-  "Everyday": "休闲鞋",
-  "Athletic": "运动鞋",
-  "Formal": "正式鞋",
-  "Niche": "小众鞋",
-  "Active": "运动",
-  "Casual": "休闲",
-  "Workplace": "工作场合",
-  "Social": "社交",
-  "Event": "活动",
+  "spring": "春季",
+  "summer": "夏季",
+  "autumn": "秋季",
+  "winter": "冬季",
+  "multi": "多季",
+  "top": "上装",
+  "bottom": "下装",
+  "onePiece": "连体衣",
+  "base": "基础层",
+  "mid": "中间层",
+  "outer": "外层",
+  "red": "红色",
+  "blue": "蓝色",
+  "green": "绿色",
+  "yellow": "黄色",
+  "brown": "棕色",
+  "grey": "灰色",
+  "rainbow": "彩虹色",
+  "black": "黑色",
+  "white": "白色",
+  "light": "浅色",
+  "medium": "中间色",
+  "dark": "深色",
+  "bag": "包",
+  "belt": "腰带",
+  "eyewear": "眼镜",
+  "gloves": "手套",
+  "hat": "帽子",
+  "jewellery": "珠宝",
+  "scarf": "围巾",
+  "tie": "领带",
+  "clothing": "服装",
+  "shoes": "鞋子",
+  "accessory": "配饰",
+  "boots": "靴子",
+  "everyday": "休闲鞋",
+  "athletic": "运动鞋",
+  "formal": "正式鞋",
+  "niche": "小众鞋",
+  "active": "运动",
+  "casual": "休闲",
+  "workplace": "工作场合",
+  "social": "社交",
+  "event": "活动",
   "upload_upload": "上传",
   "filter_filter": "筛选",
   "addCloset_addCloset": "添加衣橱",
@@ -108,9 +108,9 @@
   "thankYou": "谢谢！",
   "interestAcknowledged": "您的兴趣已被记录。请关注更新。",
   "ok": "好的",
-  "Sell": "出售",
-  "Swap": "交换",
-  "Gift": "传递爱心",
+  "sell": "出售",
+  "swap": "交换",
+  "gift": "传递爱心",
   "Throw": "扔掉",
   "declutterOptions" : "你想做什么？",
   "itemsUploadedTooltip": "这显示了您上传的物品数量",
