--- a/lib/l10n/intl_en.arb
+++ b/lib/l10n/intl_en.arb
@@ -171,5 +171,14 @@
   "myOutfitOfTheDay": "My Outfit of the Day",
   "date": "Date",
   "noItemsFound": "No items found",
-  "styleOn": "Style On"
+  "styleOn": "Style On",
+  "like": "love it",
+  "alright": "It's okay",
+  "dislike": "Not for me",
+  "selfie": "selfie",
+  "share": "share",
+  "OutfitReview": "Outfit Review",
+  "shareFeatureTitle": "Effortless Outfit Sharing",
+  "shareFeatureDescription": "Share your Outfit of the Day with one tap across all your social media. Elevate your style and inspire others effortlessly.",
+  "addYourComments": "Add your comments"
 }
