Implement outfit_review_custom_dialogue.dart so that people knows when outfit is reviewed and recorded

--- a/lib/l10n/intl_en.arb
+++ b/lib/l10n/intl_en.arb
@@ -186,6 +186,8 @@
   "and": " and the ",
   "termsAndConditions": "Terms and Conditions",
   "alright_feedback_sentence": "Select the item you feel is alright.",
-  "dislike_feedback_sentence": "Select the item you feel is not your type."
+  "dislike_feedback_sentence": "Select the item you feel is not your type.",
+  "outfitReviewTitle": "Outfit Review Submitted",
+  "outfitReviewContent": "Your outfit review has been successfully submitted!"
 
 }
