Addressed the issue of dealing with error if they key in wrong info for outfit review

--- a/lib/l10n/intl_en.arb
+++ b/lib/l10n/intl_en.arb
@@ -188,6 +188,7 @@
   "alright_feedback_sentence": "Select the item you feel is alright.",
   "dislike_feedback_sentence": "Select the item you feel is not your type.",
   "outfitReviewTitle": "Outfit Review Submitted",
-  "outfitReviewContent": "Your outfit review has been successfully submitted!"
+  "outfitReviewContent": "Your outfit review has been successfully submitted!",
+  "pleaseSelectAtLeastOneItem": "Please select at least one item you didn't like."
 
 }
