Centralized the logic for bloc save and fetch and logger. Create cutomized loading bar.

--- a/lib/l10n/intl_zh_CN.arb
+++ b/lib/l10n/intl_zh_CN.arb
@@ -31,7 +31,7 @@
   "yellow": "黄色",
   "brown": "棕色",
   "grey": "灰色",
-  "rainbow": "彩虹",
+  "rainbow": "多色",
   "black": "黑色",
   "white": "白色",
   "light": "浅色",
@@ -138,8 +138,8 @@
   "uploadConfirmationTitle": "确认衣橱完成",
   "uploadConfirmationDescription": "您是否已完成上传所有现有物品到您的衣橱？一旦确认，任何带有价格的新上传将标记为您的衣橱新增加的物品。",
   "confirmUpload": "确认完成",
-  "currentStreak": "您当前未购买任何服装的连续天数",
-  "highestStreak": "您最高的无购买服装连续天数",
+  "currentStreak": "您当前不买衣服的天数记录",
+  "highestStreak": "您不买衣服的最高天数记录",
   "costOfNewItems": "您购买的新物品花费金额",
   "numberOfNewItems": "您购买的新物品数量",
   "deleteAccountTitle": "删除账户",
@@ -171,7 +171,7 @@
   "myOutfitOfTheDay": "今日穿搭",
   "date": "日期",
   "noItemsFound": "未找到物品",
-  "styleOn": "风格搭配",
+  "styleOn": "评价搭配",
   "like": "喜欢",
   "alright": "还行",
   "dislike": "不适合我",
@@ -185,8 +185,8 @@
   "privacyTerms": "隐私条款",
   "and": " 和 ",
   "termsAndConditions": "服务条款",
-  "alright_feedback_sentence": "选择你觉得还可以的物品。",
-  "dislike_feedback_sentence": "选择你觉得不适合的物品。",
+  "alright_feedback_sentence": "点击不太适合这套搭配的单品。",
+  "dislike_feedback_sentence": "点击让这套搭配不太合适的单品。",
   "outfitReviewTitle": "穿搭评论已提交",
   "outfitReviewContent": "您的穿搭评论已成功提交！",
   "pleaseSelectAtLeastOneItem": "请选择至少一件您不喜欢的物品。",
