--- a/lib/l10n/intl_en.arb
+++ b/lib/l10n/intl_en.arb
@@ -31,7 +31,7 @@
   "yellow": "Yellow",
   "brown": "Brown",
   "grey": "Grey",
-  "rainbow": "Rainbow",
+  "rainbow": "Multicolour",
   "black": "Black",
   "white": "White",
   "light": "Light",
@@ -138,8 +138,8 @@
   "uploadConfirmationTitle": "Confirm Closet Completion",
   "uploadConfirmationDescription": "Have you finished uploading all your existing items to your closet? Once confirmed, any new uploads with price will be marked as new additions to your wardrobe.",
   "confirmUpload": "Confirm Achievement",
-  "currentStreak": "Current streak for number of days you have not bought any clothing",
-  "highestStreak": "Highest streak for number of days you have not bought any clothing",
+  "currentStreak": "Your current record of days without buying clothes.",
+  "highestStreak": "Your top record of days without buying clothes.",
   "costOfNewItems": "Cost of the new items you have purchased",
   "numberOfNewItems": "Number of new items you have purchased",
   "deleteAccountTitle": "Delete Account",
@@ -171,7 +171,7 @@
   "myOutfitOfTheDay": "My Outfit of the Day",
   "date": "Date",
   "noItemsFound": "No items found",
-  "styleOn": "Style On",
+  "styleOn": "Review Outfit",
   "like": "love it",
   "alright": "It's okay",
   "dislike": "Not for me",
@@ -185,8 +185,8 @@
   "privacyTerms": "Privacy Terms",
   "and": " and the ",
   "termsAndConditions": "Terms and Conditions",
-  "alright_feedback_sentence": "Select the item you feel is alright.",
-  "dislike_feedback_sentence": "Select the item you feel is not your type.",
+  "alright_feedback_sentence": "Tap the items that don't quite fit this outfit.",
+  "dislike_feedback_sentence": "Tap the items that didn't work in this outfit.",
   "outfitReviewTitle": "Outfit Review Submitted",
   "outfitReviewContent": "Your outfit review has been successfully submitted!",
   "pleaseSelectAtLeastOneItem": "Please select at least one item you didn't like.",
