--- a/lib/l10n/intl_zh_CN.arb
+++ b/lib/l10n/intl_zh_CN.arb
@@ -191,6 +191,10 @@
   "outfitReviewContent": "您的穿搭评论已成功提交！",
   "pleaseSelectAtLeastOneItem": "请选择至少一件您不喜欢的物品。",
   "outfitCreationSuccessTitle": "准备好闪耀！",
-  "outfitCreationSuccessContent": "搭配已完成。去征服世界吧！"
+  "outfitCreationSuccessContent": "搭配已完成。去征服世界吧！",
+  "supportEmailSubject": "支持请求",
+  "supportEmailBody": "请在此描述您的问题",
+  "npsReviewEmailSubject": "我们期待您的反馈",
+  "npsReviewEmailBody": "请告诉我们如何改进？"
 
 }
