Translate info hub to different languages

--- a/lib/l10n/intl_en.arb
+++ b/lib/l10n/intl_en.arb
@@ -195,6 +195,8 @@
   "supportEmailSubject": "Support Request",
   "supportEmailBody": "Describe your issue here",
   "npsReviewEmailSubject": "We will Love Your Feedback",
-  "npsReviewEmailBody": "Could you please share more details on how we can improve?"
-
+  "npsReviewEmailBody": "Could you please share more details on how we can improve?",
+  "infoHubUrl": "https://inky-twill-3ab.notion.site/8bca4fd6945f4f808a32cbb5ad28400c",
+  "privacyTermsUrl": "https://www.notion.so/Privacy-Policy-9f21c7664efe4b03a8965252495dc1a6",
+  "termsAndConditionsUrl": "https://www.notion.so/Service-Term-1a1b8f68ebba48158c0f42e19a135c6e"
 }
