--- a/lib/l10n/intl_zh_CN.arb
+++ b/lib/l10n/intl_zh_CN.arb
@@ -198,7 +198,8 @@
   "npsReviewEmailBody": "请告诉我们如何改进？",
   "infoHubUrl": "https://inky-twill-3ab.notion.site/dc4dd32378b0478daf36fca24e00d0c8",
   "privacyTermsUrl": "https://inky-twill-3ab.notion.site/5c881235e92240d9a008e0fe6bb80f0b",
-  "termsAndConditionsUrl": "https://www.notion.so/4d657b804aed4a30a9e5fa71ba0afc78"
-
-
+  "termsAndConditionsUrl": "https://www.notion.so/4d657b804aed4a30a9e5fa71ba0afc78",
+  "unableToRetrieveUserId": "无法获取用户 ID。请重新登录。",
+  "failedToSubmitScore": "提交分数失败。",
+  "recommendClosetConscious": "您有多大可能向朋友推荐环保衣橱 (Closet Conscious)?"
 }
