--- a/lib/l10n/intl_en.arb
+++ b/lib/l10n/intl_en.arb
@@ -44,7 +44,9 @@
   "hat": "Hat",
   "jewellery": "Jewellery",
   "scarf": "Scarf",
-  "tie": "Tie",
+  "tech": "Tech",
+  "other": "Other",
+  "perfume": "Perfume",
   "clothing": "Clothing",
   "shoes": "Shoes",
   "accessory": "Accessory",
@@ -201,5 +203,6 @@
   "termsAndConditionsUrl": "https://www.notion.so/Service-Term-1a1b8f68ebba48158c0f42e19a135c6e",
   "unableToRetrieveUserId": "Unable to retrieve user ID. Please sign in again.",
   "failedToSubmitScore": "Failed to submit score.",
-  "recommendClosetConscious": "How likely will you recommend Closet Conscious to a friend?"
+  "recommendClosetConscious": "How likely will you recommend Closet Conscious to a friend?",
+  "npsExplanation": "On a scale from 0 to 10:\n0: Not at all likely\n10: Extremely likely"
 }
