--- a/lib/l10n/intl_zh_CN.arb
+++ b/lib/l10n/intl_zh_CN.arb
@@ -204,5 +204,7 @@
   "unableToRetrieveUserId": "无法获取用户 ID。请重新登录。",
   "failedToSubmitScore": "提交分数失败。",
   "recommendClosetConscious": "您有多大可能向朋友推荐环保衣橱 (Closet Conscious)?",
-  "npsExplanation": "在 0 到 10 的范围内打分：\n0：完全不推荐\n10：非常推荐"
+  "npsExplanation": "在 0 到 10 的范围内打分：\n0：完全不推荐\n10：非常推荐",
+  "termsNotAcceptedMessage": "您需要接受条款和条件才能登录。",
+  "unknownError": "出现问题，请稍后再试。"
 }
