Able to successfully disposed item_upload_bloc.dart if no permission is given. Modularize permission so that it can be utilised.

--- a/lib/l10n/intl_en.arb
+++ b/lib/l10n/intl_en.arb
@@ -64,7 +64,7 @@
   "filter_filter": "Filter",
   "swap_item": "Swap QR",
   "metadata": "More",
-  "addCloset_addCloset": "Add Closet",
+  "addCloset_addCloset": "Multi Closet",
   "itemUploaded_itemUploaded": "Item Uploaded",
   "myClosetTitle": "My Closet",
   "myOutfitTitle": "Create My Outfit",
@@ -154,7 +154,7 @@
   "congratulations": "Congratulations!",
   "achievementMessage": "Here is your achievement:",
   "AnalyticsSearchPremiumFeature": "Interested in Usage Analytics?",
-  "trackAnalyticsDescription": "We're considering adding a premium feature for analyzing your usage data for items and outfits.",
+  "trackAnalyticsDescription": "We're exploring a premium feature to analyze your items' cost per wear and provide personalized outfit insights.",
   "calendarPremiumFeature": "Interested in Calendar View?",
   "reviewOutfitsInCalendar": "We're considering adding a premium feature to view previous outfits in a calendar format and integrate with multi-closet.",
   "filterSearchPremiumFeature": "Interested in Advanced Filters?",
@@ -207,8 +207,10 @@
   "npsExplanation": "On a scale from 0 to 10:\n0: Not at all likely\n10: Extremely likely",
   "termsNotAcceptedMessage": "You need to accept the terms and conditions before signing in.",
   "unknownError": "Something went wrong. Please try again later.",
-  "camera_permission_needed": "Camera Permission Needed",
-  "camera_permission_explanation": "We need access to your camera to take photos of your items for easy organization.",
-  "general_permission_explanation": "This permission is required for the app to function properly.",
+  "permission_needed": "This permission is required for the app to function properly.",
+  "camera_item_permission_explanation": "We need access to your camera to take photos of your items for easy organization.",
+  "camera_selfie_permission_explanation": "We need access to your camera to allow you take your selfie photos to review how it looks on you.",
+  "camera_permission_explanation": "We need access to your camera to take photos.",
+  "general_permission_explanation": "This permission is needed to use this feature.",
   "open_settings": "Open Settings"
 }
