Changing AuthBloc to use locator and changing others text to show misc

--- a/lib/l10n/intl_en.arb
+++ b/lib/l10n/intl_en.arb
@@ -45,7 +45,7 @@
   "jewellery": "Jewellery",
   "scarf": "Scarf",
   "tech": "Tech",
-  "other": "Other",
+  "other": "Misc",
   "perfume": "Perfume",
   "clothing": "Clothing",
   "shoes": "Shoes",
