--- a/lib/l10n/intl_zh_CN.arb
+++ b/lib/l10n/intl_zh_CN.arb
@@ -45,7 +45,7 @@
   "jewellery": "珠宝",
   "scarf": "围巾",
   "tech": "科技",
-  "other": "其他",
+  "other": "杂项",
   "perfume": "香水",
   "clothing": "服装",
   "shoes": "鞋子",
