Refactor the photo functionality to modularize it. Still not working, but to build it for the modularized future.

--- a/lib/l10n/intl_en.arb
+++ b/lib/l10n/intl_en.arb
@@ -208,8 +208,9 @@
   "termsNotAcceptedMessage": "You need to accept the terms and conditions before signing in.",
   "unknownError": "Something went wrong. Please try again later.",
   "permission_needed": "This permission is required for the app to function properly.",
-  "camera_item_permission_explanation": "We need access to your camera to take photos of your items for easy organization.",
-  "camera_selfie_permission_explanation": "We need access to your camera to allow you take your selfie photos to review how it looks on you.",
+  "camera_upload_item_permission_explanation": "Allow access to your camera to upload photos of your clothes for easier closet management.",
+  "camera_edit_item_permission_explanation": "Allow access to update item photos with your camera.",
+  "camera_selfie_permission_explanation": "Allow access to your camera to take selfies with your outfits.",
   "camera_permission_explanation": "We need access to your camera to take photos.",
   "general_permission_explanation": "This permission is needed to use this feature.",
   "open_settings": "Open Settings",
