--- a/lib/l10n/intl_en.arb
+++ b/lib/l10n/intl_en.arb
@@ -214,5 +214,13 @@
   "camera_permission_explanation": "We need access to your camera to take photos.",
   "general_permission_explanation": "This permission is needed to use this feature.",
   "open_settings": "Open Settings",
-  "noImage": "No Image"
+  "noImage": "No Image",
+  "aistylist": "AI Stylist",
+  "aiStylistFeatureTitle": "AI Stylist Usage Feature",
+  "aiStylistFeatureDescription": "Unlock AI-powered outfit suggestions. Review 90 outfits to get personalized recommendations based on your style.",
+  "aiupload": "Smart\nUpload",
+  "aiUploadFeatureTitle": "Smart Upload Usage Feature",
+  "aiUploadFeatureDescription": "Easily upload items with automatic metadata tagging. The AI helps you save time by filling in details such as category, color, and more.",
+  "selectItemsToCreateOutfit": "Please select items to create your outfit."
+
 }
