Create arrange_premium_feature_request in 1/2 hour

--- a/lib/l10n/intl_en.arb
+++ b/lib/l10n/intl_en.arb
@@ -165,6 +165,9 @@
   "multiClosetFeatureDescription": "We're considering adding a premium feature to create multiple closets, including temporary and disappearing closets.",
   "swapFeatureTitle": "Interested in Swapping Items?",
   "swapFeatureDescription": "We're considering adding a premium feature for digitally swapping items and getting notified about nearby swap events.",
+  "arrange": "Arrange",
+  "arrangeFeatureTitle": "Interested in Customizing Your Closet Layout?",
+  "arrangeFeatureDescription": "We're considering adding a feature that lets you customize grid sizes and sort items by cost per wear, updated date, and more.",
   "ok": "Interested",
   "OutfitDay": "Outfit of the Day",
   "noItemsInCategory": "Please upload your items in my closet",
