--- a/lib/l10n/intl_zh_CN.arb
+++ b/lib/l10n/intl_zh_CN.arb
@@ -165,6 +165,9 @@
   "multiClosetFeatureDescription": "我们正在考虑添加一个高级功能，以创建多个衣橱，包括临时和消失的衣橱。",
   "swapFeatureTitle": "有兴趣交换物品吗？",
   "swapFeatureDescription": "我们正在考虑添加一个高级功能，用于数字交换物品并收到附近交换活动的通知。",
+  "arrange": "排列",
+  "arrangeFeatureTitle": "感兴趣自定义你的衣橱布局吗？",
+  "arrangeFeatureDescription": "我们正在考虑添加一个功能，让你可以自定义网格大小，并按单次穿着成本、更新时间等进行排序。",
   "ok": "有兴趣",
   "OutfitDay": "今日穿搭",
   "noItemsInCategory": "请上传您的物品到我的衣橱",
