--- a/lib/l10n/intl_zh_CN.arb
+++ b/lib/l10n/intl_zh_CN.arb
@@ -224,5 +224,23 @@
   "aiUploadFeatureTitle": "智能上传使用功能",
   "aiUploadFeatureDescription": "轻松上传物品，并自动添加元数据。AI 会帮助您节省时间，填写类别、颜色等详细信息。",
   "selectItemsToCreateOutfit": "请选择物品以创建您的穿搭。",
-  "unsavedChangesMessage": "您有未保存的更改。请选择保存或放弃这些更改，然后再选择照片。"
+  "unsavedChangesMessage": "您有未保存的更改。请选择保存或放弃这些更改，然后再选择照片。",
+  "noNewClothes90Achievement": "可持续的开始！",
+  "noNewClothes90AchievementMessage": "你已经坚持90天没有购买新衣服了！你正在为更绿色的未来建立强大的习惯。继续保持！",
+  "noNewClothes225Achievement": "环保战士的崛起！",
+  "noNewClothes225AchievementMessage": "225天，还在继续！你在可持续发展方面引领潮流，你的衣柜蒸蒸日上。了不起的努力！",
+  "noNewClothes405Achievement": "有意识选择的冠军！",
+  "noNewClothes405AchievementMessage": "405天的坚守！你对珍惜已有物品的承诺令人鼓舞。你是有意识生活的榜样。",
+  "noNewClothes630Achievement": "可持续发展的领导者！",
+  "noNewClothes630AchievementMessage": "630天没有购买新衣服——你以身作则！你的奉献精神对地球产生了真正的影响。",
+  "noNewClothes900Achievement": "改变的先锋！",
+  "noNewClothes900AchievementMessage": "哇！900天的明智选择。你的影响力正在激励他人重新思考他们的习惯。继续为可持续发展开辟道路！",
+  "noNewClothes1575Achievement": "极简主义大师！",
+  "noNewClothes1575AchievementMessage": "1,575天的坚守，你拥抱了自己已有的物品。你的旅程堪称传奇。你正在改写时尚的规则！",
+  "allClothesWornAchievement": "全部衣服都穿过了！",
+  "allClothesWornAchievementMessage": "你已经穿过了衣柜里的每一件衣服！你正在掌握有意识的时尚选择。做得好！",
+  "closetUploadAchievement": "全部衣服都穿过了！",
+  "closetUploadAchievementMessage": "你已经穿过了衣柜里的每一件衣服！你正在掌握有意识的时尚选择。做得好！",
+  "defaultAchievementTitle": "成就解锁！",
+  "defaultAchievementMessage": "你达到了新的里程碑！在有意识的时尚之旅中，继续保持出色的表现。"
 }
